fixed text aligns

--- a/src/components/nav.module.scss
+++ b/src/components/nav.module.scss
@@ -8,6 +8,7 @@
     text-align: center;
     justify-content: space-between;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 132px;
     
     .rightBlock {
         display: flex;
@@ -26,6 +27,7 @@
     }
 
     img {
+        max-height: 106px;
         transition: .2s ease;
         &:first-of-type {
             margin-left: 20px;
@@ -34,6 +36,7 @@
     }
 
     .hoverable {
+        transition: .2s ease;
         &:hover{
             border-bottom: 4px solid blue;
             transition: .2s ease;
@@ -41,6 +44,7 @@
     }
 
     .active {
+        transition: .2s ease;
         border-bottom: 4px solid orange;
     }
 }
