--- a/src/pages/quantity/quantity.module.scss
+++ b/src/pages/quantity/quantity.module.scss
@@ -18,6 +18,7 @@
     .heading {
         font-family: Gloria Hallelujah;
         margin-top: 30px;
+        text-align: center;
         font-size: 4em;
     }
 
